--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
     <input type = "button" value = "9" onclick='sendButton(this.value);'>
     <input type = "button" value = "+" onclick='sendButton(this.value);'>
     <br/>
-    <input type = "button" value = "4"onClick="">
-    <input type = "button" value = "5"onClick="">
-    <input type = "button" value = "6"onClick="">
-    <input type = "button" value = "-"onClick="">
+    <input type = "button" value = "4"onclick='sendButton(this.value);'>
+    <input type = "button" value = "5"onclick='sendButton(this.value);'>
+    <input type = "button" value = "6"onclick='sendButton(this.value);'>
+    <input type = "button" value = "-"onclick='sendButton(this.value);'>
     <br/>
     <input type = "button" id = "form" value = "1" onClick="sendButton(this.value);">
-    <input type= "button" value = "2" onClick = "">
-    <input type = "button" value = "3" onClick="">
-    <input type= "button" value = "x" onClick = "">
+    <input type= "button" value = "2" onclick='sendButton(this.value);'>
+    <input type = "button" value = "3" onclick='sendButton(this.value);'>
+    <input type= "button" value = "x" onclick='sendButton(this.value);'>
     <br/>
 <input type = "button" value = "0" onclick='sendButton(this.value);'>
 <input type = "button" value = "." onclick='sendButton(this.value);'>
-<input type = "button" value = "*" >
-<input type = "button" value = "=">
+<input type = "button" value = "*" onclick='sendButton(this.value);'>
+<input type = "button" id="eq" value = "=" onclick='sendButton(this.value);'>
 </div>
 </div>
   </body>
