Add function for plus, numbers, equal and AC button

--- a/index.html
+++ b/index.html
@@ -23,30 +23,30 @@
 <h1 class="header">calculator r2d2 <h1>
 <input name="result" id='num'>
   <br/>
-    <input type = "button" class = "btn" value = "AC" onclick='sendButton(this.value);'>
-    <input type = "button" value = "CE" onclick='sendButton(this.value);'>
-    <input type = "button" value = "%" onclick='sendButton(this.value);'>
-    <input type = "button" value = "/"onclick='sendButton(this.value);'>
+    <input type = "button" class = "btn" value = "AC" class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "CE" class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "%" class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "/"class="key" onclick='sendButton(event);'>
     <br/>
-    <input type= "button" value = "7" onclick='sendButton(this.value);'>
-    <input type = "button" value = "8" onclick='sendButton(this.value);'>
-    <input type = "button" value = "9" onclick='sendButton(this.value);'>
-    <input type = "button" value = "+" onclick='sendButton(this.value);'>
+    <input type= "button" value = "7" class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "8" class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "9" class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "+" class="key" onclick='sendButton(event);'>
     <br/>
-    <input type = "button" value = "4"onclick='sendButton(this.value);'>
-    <input type = "button" value = "5"onclick='sendButton(this.value);'>
-    <input type = "button" value = "6"onclick='sendButton(this.value);'>
-    <input type = "button" value = "-"onclick='sendButton(this.value);'>
+    <input type = "button" value = "4"class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "5"class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "6"class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "-"class="key" onclick='sendButton(event);'>
     <br/>
-    <input type = "button" id = "form" value = "1" onClick="sendButton(this.value);">
-    <input type= "button" value = "2" onclick='sendButton(this.value);'>
-    <input type = "button" value = "3" onclick='sendButton(this.value);'>
-    <input type= "button" value = "x" onclick='sendButton(this.value);'>
+    <input type = "button" id = "form" value = "1" class="key" onclick="sendButton(event);">
+    <input type= "button" value = "2" class="key" onclick='sendButton(event);'>
+    <input type = "button" value = "3" class="key" onclick='sendButton(event);'>
+    <input type= "button" value = "x" class="key" onclick='sendButton(event);'>
     <br/>
-<input type = "button" value = "0" onclick='sendButton(this.value);'>
-<input type = "button" value = "." onclick='sendButton(this.value);'>
-<input type = "button" value = "*" onclick='sendButton(this.value);'>
-<input type = "button" id="eq" value = "=" onclick='sendButton(this.value);'>
+<input type = "button" value = "0" class="key" onclick='sendButton(event);'>
+<input type = "button" value = "." class="key" onclick='sendButton(event);'>
+<input type = "button" value = "*" class="key" onclick='sendButton(event);'>
+<input type = "button" id="eq" value = "=" class="key" onclick='sendButton(event);'>
 </div>
 </div>
   </body>
